--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
-	<title>TopGurus.in: What do you waat to learn today?</title>
+	<title>TopGurus.in: What do you want to learn today?</title>
 	<meta name="description" content="A platform to discover gurus, courses and connect to with co-learners.">
 	<meta name="author" content="topgurus.in">
 
