--- a/public/index.html
+++ b/public/index.html
@@ -56,7 +56,7 @@
       <!-- Main hero unit for a primary marketing message or call to action -->
       <div class="hero-unit">
         <h1>What do you want to learn today?</h1>
-        <p>A platform to discover gurus, courses and connect to with co-learners.</p>
+        <p>topGurus.in - a platform to discover gurus, courses and connect to with co-learners.</p>
         <p><a class="btn btn-primary btn-large">Learn more &raquo;</a></p>
       </div>
 
