--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
 	<title>TopGurus.in: What do you want to learn today?</title>
-	<meta name="description" content="A platform to discover gurus, courses and connect to with co-learners.">
+	<meta name="description" content="A platform to discover gurus, courses and co-learners.">
 	<meta name="author" content="topgurus.in">
 
 	<meta name="viewport" content="width=device-width">
@@ -56,7 +56,7 @@
       <!-- Main hero unit for a primary marketing message or call to action -->
       <div class="hero-unit">
         <h1>What do you want to learn today?</h1>
-        <p>topGurus.in - a platform to discover gurus, courses and connect to with co-learners.</p>
+        <p>TopGurus.in - a platform to discover gurus, courses and co-learners.</p>
         <p><a class="btn btn-primary btn-large">Learn more &raquo;</a></p>
       </div>
 
