--- a/public/bangalore.html
+++ b/public/bangalore.html
@@ -7,7 +7,7 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
-	<title>TopGurus.in: What do you want to learn today?</title>
+	<title>TopGurus.in: Gurus, courses and co-learners in Bangalore</title>
 	<meta name="description" content="A platform to discover gurus, courses and co-learners.">
 	<meta name="author" content="topgurus.in">
 
@@ -28,6 +28,7 @@
 <body>
 <!--[if lt IE 7]><p class=chromeframe>Your browser is <em>ancient!</em> <a href="http://browsehappy.com/">Upgrade to a different browser</a> or <a href="http://www.google.com/chromeframe/?redirect=true">install Google Chrome Frame</a> to experience this site.</p><![endif]-->
 
+
     <div class="navbar navbar-fixed-top">
     <div class="navbar-inner">
       <div class="container">
@@ -39,7 +40,7 @@
         <a class="brand" href="#">TopGurus</a>
         <div class="nav-collapse">
           <ul class="nav">
-              <li><a href="#" class="active">Home</a></li>
+              <li><a href="#">Home</a></li>
 	      <li><a href="#courses">Courses</a></li>
 	      <li><a href="#gurus">Gurus</a></li>
 	      <li class="dropdown">
@@ -64,7 +65,7 @@
             <li><a href="#">Link</a></li>
             <li class="divider-vertical"></li>
             <li class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown">Pradeep B V <b class="caret"></b></a>
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown">Pradeep B V<b class="caret"></b></a>
               <ul class="dropdown-menu">
                 <li><a href="#">Courses</a></li>
                 <li><a href="#">Gurus</a></li>
@@ -80,41 +81,49 @@
       </div>
     </div><!-- /navbar-inner -->
   </div>
-    <div class="container">
 
-      <!-- Main hero unit for a primary marketing message or call to action -->
-      <div class="hero-unit">
-        <h1>What do you want to learn today?</h1>
-        <p>TopGurus.in - a platform to discover gurus, courses and co-learners.</p>
-        <p><a class="btn btn-primary btn-large">Learn more &raquo;</a></p>
-      </div>
-
+	<div class="page-header">
+	  <h1>Abbigere, Bangalore, Karnataka</h1>
+	  <p>Gurus, Courses, col-learners</p>
+	</div>
+    <div class="container-fluid">
       <!-- Example row of columns -->
-      <div class="row">
-        <div class="span4">
+	<div class="row-fluid">
+        <div class="span3">
+	  <h4>Areas within 10kms of Abbigere</h4>
+	  <ul>
+		<li><a href="#j-p-nagar-bangalore">Abbigere (23)</a></li>
+		<li><a href="#yelahanka-bangalore">Banashankari (11)</a></li>
+		<li><a href="#yelahanka-bangalore">Cox Town (3)</a></li>
+		<li><a href="#yelahanka-bangalore">Domlur (9)</a></li>
+		<li><a href="#yelahanka-bangalore">Ejupura (28)</a></li>
+		<li><a href="#yelahanka-bangalore">Gandhi Bazar (11)</a></li>
+		<li><a href="#yelahanka-bangalore">Indiranagar (14)</a></li>
+		<li><a href="#yelahanka-bangalore">Jalahalli (7)</a></li>
+		<li><a href="#yelahanka-bangalore">Koramangala (30)</a></li>
+		<li><a href="#yelahanka-bangalore">Lotteganahalli (6)</a></li>
+		<li><a href="#yelahanka-bangalore">Malleshwaram (13)</a></li>
+		<li><a href="#yelahanka-bangalore">Neelasandra (19)</a></li>
+		<li><a href="#yelahanka-bangalore">Parappana Agrahara (8)</a></li>
+		<li><a href="#yelahanka-bangalore">Ramamurthy nagar (21)</a></li>
+		<li><a href="#yelahanka-bangalore">Sunkadakatte (10)</a></li>
+		<li><a href="#yelahanka-bangalore">Thyagaraja Nagar (16)</a></li>
+		<li><a href="#yelahanka-bangalore">Ulsoor (5)</a></li>
+		<li><a href="#yelahanka-bangalore">Vasnath Nagar (4)</a></li>
+		<li><a href="#yelahanka-bangalore">Yeshwanthpur (12)</a></li>
+	   </ul>
+	</div>
+	<div class="span9">	
           <h2>Discover Courses</h2>
            <p><a href="#guitar">guitar</a>, <a href="#painting">painting</a>, <a href="#balle">balle</a>, <a href="#pottery">pottery</a>,  <a href="#bartending">bartending</a>, <a href="#football">football</a>, <a href="#classical-vocal">classical vocal</a>, <a href="#pantomime">pantomime</a>,  <a href="#horse-riding">horse riding</a>, <a href="#piano">piano</a>, <a href="#kuchipudi">kuchupudi</a>, <a href="#swimming">swimming</a>, <a href="#calligraphy">calligraphy</a>, <a href="#astronomy">astronomy</a>, <a href="#personality-development">personality development</a>, <a href="#yoga">yoga</a>, <a href="#drawing">drawing</a>, <a href="#medidation">meditation</a>, <a href="#go-karting">go karting</a>, <a href="#disc-jockeying">disc jockeying</a>, <a href="#skating">skating</a>, <a href="#body-building">body building</a>, <a href="#cooking">cooking</a>, <a href="#beauty">beauty</a>, <a href="#abacus">abacus</a>, <a href="#knitting">knitting</a>, <a href="#roof-top-gardening">roof-top-gardening</a>, <a href="#fashion-designing">fashion designing</a>, <a href="#photography">photography</a>, <a href="#karate">karate</a>, <a href="#desktop-pubslishing">desktop publishing</a>, <a href="#share-trading">share trading</a>, <a href="#animation">animation</a>, <a href="#interior decoration">interior decoration</a>, <a href="#cricket">cricket</a>, <a href="#toy making">toy making</a>, <a href="#violin">violin</a>, <a href="#fitness">fitness</a>, <a href="#tailoring">tailoring</a>, <a href="#driving">driving</a>, <a href="#shorthand">shorthand</a>, <a href="#tennis">tennis</a>, <a href="#french">french</a>, <a href="#event-management">event management</a>, <a href="#spoken english">spoken english</a></p>
           <p><a class="btn" href="#">More courses &raquo;</a></p>
         </div>
-        <div class="span4">
+        <div class="span9">
           <h2>Connect with co-learners</h2>
-           <ul><li><a href="#new-delhi">New Delhi</a> - <a href="#karol-bagh-new-delhi">Karol Bagh (21)</a>, <a href="#rohini-new-delhi">Rohini (8)</a></li>
-		<li><a href="#mumbai">Mumbai</a> - <a href="#sion-mumbai">Sion (9)<a>, <a href="#kalyan-mumbai">Kalyan (16)</a></li>
-		<li><a href="#bangalore">Bangalore</a> - <a href="#j-p-nagar-bangalore">J P Nagar (23)</a>, <a href="#yelahanka-bangalore">Yelahanka (10)</a></li>
-		<li><a href="#chennai">Chennai</a> - <a href="#nandanam-chennai">Nandanam (11)<a>, <a href="#chrompet-chennai">Chrompet (4)</a></li>
-		<li><a href="#jaipur">Jaipur</a> - <a href="#shastry-nagar-jaipur">Shastry Nagar (7)<a></li>
- 		<li><a href="#patna">Patna</a> - <a href="#anandpuri-patna">Anandpuri (53)<a></li>
-		<li><a href="#kolkata">Kolkata</a> - <a href="#h-b-sarani-kolkata">H B Sarani (3)</a></li>
-		<li><a href="#hyderabad">Hyderabad</a> - <a href="#nizampet-hyderabad">Nizampet (12)</a></li>
-		<li><a href="#ahmedabad">Ahmedabad</a> - <a href="#old-madhapura-ahmedabad">Old Madhapura (5)<a></li>
-	   </ul>
-          <p><a class="btn" href="#">More locations &raquo;</a></p>
+	  
+           <p><a href="#guitar">guitar</a>, <a href="#painting">painting</a>, <a href="#balle">balle</a>, <a href="#pottery">pottery</a>,  <a href="#bartending">bartending</a>, <a href="#football">football</a>, <a href="#classical-vocal">classical vocal</a>, <a href="#pantomime">pantomime</a>,  <a href="#horse-riding">horse riding</a>, <a href="#piano">piano</a>, <a href="#kuchipudi">kuchupudi</a>, <a href="#swimming">swimming</a>, <a href="#calligraphy">calligraphy</a>, <a href="#astronomy">astronomy</a>, <a href="#personality-development">personality development</a>, <a href="#yoga">yoga</a>, <a href="#drawing">drawing</a>, <a href="#medidation">meditation</a>, <a href="#go-karting">go karting</a>, <a href="#disc-jockeying">disc jockeying</a>, <a href="#skating">skating</a>, <a href="#body-building">body building</a>, <a href="#cooking">cooking</a>, <a href="#beauty">beauty</a>, <a href="#abacus">abacus</a>, <a href="#knitting">knitting</a>, <a href="#roof-top-gardening">roof-top-gardening</a>, <a href="#fashion-designing">fashion designing</a>, <a href="#photography">photography</a>, <a href="#karate">karate</a>, <a href="#desktop-pubslishing">desktop publishing</a>, <a href="#share-trading">share trading</a>, <a href="#animation">animation</a>, <a href="#interior decoration">interior decoration</a>, <a href="#cricket">cricket</a>, <a href="#toy making">toy making</a>, <a href="#violin">violin</a>, <a href="#fitness">fitness</a>, <a href="#tailoring">tailoring</a>, <a href="#driving">driving</a>, <a href="#shorthand">shorthand</a>, <a href="#tennis">tennis</a>, <a href="#french">french</a>, <a href="#event-management">event management</a>, <a href="#spoken english">spoken english</a></p>
+          <p><a class="btn" href="#">More learners &raquo;</a></p>
        </div>
-        <div class="span4">
-          <h2>Guru?</h2>
-          <p>Expert, hobbyist, amateur? You run an institution or you freelance? Want to teach? Share knowledge? Offer certification? Here you go.. </p>
-          <p><a class="btn" href="#">Offer a Course &raquo;</a></p>
-        </div>
       </div>
 
       <hr>
